fix: update project application names

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -37,9 +37,9 @@ As explained in the [introduction to deployment](/docs/key-topics/deployment/int
 To make it a bit easier for new users, Webiny CLI provides the `deploy` command, which deploys all of the three applications that are by default included in a Webiny project. It deploys them in the following order:
 
 <!-- vale off -->
-1. **api**
-2. **apps/admin**
-3. **apps/site**
+1. **API** (`./api`) - your project's GraphQL API
+2. **Admin Area** (`./apps/admin`) - your administration area
+3. **Website** (`./apps/website`) - your public website
 <!-- vale on -->
 
 So, to do a complete deployment of your Webiny project, in your terminal of choice, and in your project root, execute the following command:
