--- a/docs/key-topics/cloud-infrastructure/api/overview-vpc-default.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/overview-vpc-default.mdx
@@ -1,14 +1,14 @@
 ---
-id: overview-vpc
-title: Overview (custom VPC)
-sidebar_label: Overview (custom VPC)
+id: overview-vpc-default
+title: Default VPC
+sidebar_label: Default VPC
 keywords: ["cloud", "infrastructure", "api", "vpc", "lambda", "database", "s3", "storage", "diagram"]
 description: Learn about the necessary cloud infrastructure resources on which the API project application relies on.
 ---
 
-import Theme from "../../mdxComponents/theme";
+import Theme from "../../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
-import DiagramApi from "./components/DiagramApi";
+import DiagramApi from "./../components/DiagramApi";
 
 :::tip What you’ll learn
 
