fix: reorganize cloud infrastructure key topics

--- a/docs/key-topics/cloud-infrastructure/api/file-download.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/file-download.mdx
@@ -8,7 +8,6 @@ description: Learn about the necessary cloud infrastructure resources on which t
 
 import Theme from "../../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
-import DiagramApi from "./../components/DiagramApi";
 
 :::tip What you’ll learn
 
@@ -28,6 +27,10 @@ import DiagramApi from "./../components/DiagramApi";
 />
 
 <!-- vale on -->
+
+:::info
+For brevity, the diagram doesn't include network-level cloud infrastructure resources, like region, VPC, availability zones, and so on. Check out the [Default VPC](/docs/key-topics/cloud-infrastructure/api/overview-vpc-default) and [Custom VPC](/docs/key-topics/cloud-infrastructure/api/overview-vpc-custom) topics if you're interested in that aspect of the deployed cloud infrastructure.
+:::
 
 ## Description
 
