--- a/docs/key-topics/cloud-infrastructure/api/file-upload.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/file-upload.mdx
@@ -28,6 +28,10 @@ import { Box, Button, Grid, Link } from "theme-ui";
 
 <!-- vale on -->
 
+:::info
+For brevity, the diagram doesn't include network-level cloud infrastructure resources, like region, VPC, availability zones, and so on. Check out the [Default VPC](/docs/key-topics/cloud-infrastructure/api/overview-vpc-default) and [Custom VPC](/docs/key-topics/cloud-infrastructure/api/overview-vpc-custom) topics if you're interested in that aspect of the deployed cloud infrastructure.
+:::
+
 ## Description
 
 The diagram shows what happens every time a client tries to upload a binary file.
