--- a/docs/key-topics/cloud-infrastructure/api/graphql-requests.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/graphql-requests.mdx
@@ -28,9 +28,13 @@ import { Box, Button, Grid, Link } from "theme-ui";
 
 <!-- vale on -->
 
+:::info
+For brevity, the diagram doesn't include network-level cloud infrastructure resources, like region, VPC, availability zones, and so on. Check out the [Default VPC](/docs/key-topics/cloud-infrastructure/api/overview-vpc-default) and [Custom VPC](/docs/key-topics/cloud-infrastructure/api/overview-vpc-custom) topics if you're interested in that aspect of the deployed cloud infrastructure.
+:::
+
 ## Description
 
-The diagram shows what happens every time a GraphQL query or mutation (an HTTP request) gets issued by the client, for example, the **Admin Area**, or **Website** applications.
+The diagram shows how HTTP requests (GraphQL queries and mutations) travel through the deployed cloud infrastructure. Request are primarily issued by the **Admin Area**, or **Website** applications, but of course, can be issued by other clients as well.
 
 The steps are the following:
 
@@ -40,4 +44,5 @@ The steps are the following:
 4. Depending on the issued GraphQL operation, the Lambda function's code may issue one or more requests to other cloud infrastructure resources:
     1. Amazon Cognito <diagram-letter>D</diagram-letter> to perform identity authentication
     2. Amazon DynamoDB <diagram-letter>E</diagram-letter> or Amazon ElasticSearch Service <diagram-letter>F</diagram-letter> to perform database queries
-5. Once the code execution has completed, an HTTP response is returned back to the Amazon API Gateway <diagram-letter>B</diagram-letter>, and again forwarded to the Amazon CloudFront <diagram-letter>A</diagram-letter>, and finally returned back to the client.
+5. Once the code execution has completed, an HTTP response is returned back to the Amazon API Gateway <diagram-letter>B</diagram-letter>.
+6. The Amazon API Gateway <diagram-letter>B</diagram-letter> forwards the request to the Amazon CloudFront <diagram-letter>A</diagram-letter>, which again forwards it back to the client.
