--- a/docs/key-topics/cloud-infrastructure/api/overview.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/overview.mdx
@@ -8,7 +8,6 @@ description: Learn about the necessary cloud infrastructure resources on which t
 
 import Theme from "../../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
-import DiagramApi from "./../components/DiagramApi";
 
 :::tip What you’ll learn
 
@@ -27,15 +26,13 @@ import DiagramApi from "./../components/DiagramApi";
   alt="Nice image"
 />
 
+:::info
+For brevity, the diagram doesn't include network-level cloud infrastructure resources, like region, VPC, availability zones, and so on. Check out the [Default VPC](/docs/key-topics/cloud-infrastructure/api/overview-vpc-default) and [Custom VPC](/docs/key-topics/cloud-infrastructure/api/overview-vpc-custom) topics if you're interested in that aspect of the deployed cloud infrastructure.
+:::
+
 ## Description
 
 The diagram gives an overview of the complete cloud infrastructure that is deployed by default Webiny applications, which together form the **API** project application.
-
-:::info
-All of the shown cloud infrastructure resources are deployed into a single AWS region, which is defined by you. Check out the [AWS Regions and Profiles](/docs/how-to-guides/deployment/aws-regions-profiles) guide for more information.
-:::
-
-The Webiny applications in question are:
 
 1. Security
 2. I18N
