--- a/docs/key-topics/cloud-infrastructure/admin/introduction.mdx
+++ b/docs/key-topics/cloud-infrastructure/admin/introduction.mdx
@@ -1,14 +1,13 @@
 ---
-id: admin
-title: Admin Area
-sidebar_label: Admin Area
+id: introduction
+title: Introduction
+sidebar_label: Introduction
 keywords: ["cloud", "infrastructure", "vpc", "admin", "administration", "lambda", "database", "s3", "storage", "diagram"]
 description: Learn about the necessary cloud infrastructure resources on which the Admin Area project application relies on.
 ---
 
-import Theme from "../../mdxComponents/theme";
+import Theme from "../../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
-import DiagramAdmin from "./components/DiagramAdmin";
 
 :::tip What you’ll learn
 
@@ -16,7 +15,7 @@ import DiagramAdmin from "./components/DiagramAdmin";
 - the necessary cloud infrastructure resources on which the **Admin Area** project application relies on
 :::
 
-## Overview
+## The Admin Area Project Application
 
 The **Admin Area** project application represents, as the name itself suggests, your administration area, which is a simple React single-page-application (SPA).
 
@@ -25,8 +24,3 @@ With only two cloud infrastructure resources, the Amazon CloudFront and Amazon S
 :::info
 Dive deeper by taking a closer look at this project application [in our GitHub repository](https://github.com/webiny/webiny-js/tree/v5/packages/cwp-template-aws/template/api).
 :::
-
-## Diagrams
-
-<DiagramAdmin />
-
