--- a/docs/key-topics/cloud-infrastructure/api/introduction.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/introduction.mdx
@@ -1,14 +1,14 @@
 ---
-id: overview-vpc
-title: Overview (custom VPC)
-sidebar_label: Overview (custom VPC)
-keywords: ["cloud", "infrastructure", "api", "vpc", "lambda", "database", "s3", "storage", "diagram"]
+id: introduction
+title: Introduction
+sidebar_label: Introduction
+keywords:
+  ["cloud", "infrastructure", "api", "vpc", "lambda", "database", "s3", "storage", "diagram"]
 description: Learn about the necessary cloud infrastructure resources on which the API project application relies on.
 ---
 
-import Theme from "../../mdxComponents/theme";
+import Theme from "../../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
-import DiagramApi from "./components/DiagramApi";
 
 :::tip What you’ll learn
 
@@ -16,7 +16,7 @@ import DiagramApi from "./components/DiagramApi";
 - the necessary cloud infrastructure resources on which the **API** project application relies on
 :::
 
-## Overview
+## The API Project Application
 
 The **API** project application represents your project's HTTP API, whose main purpose is to serve the default **Admin Area** and **Website applications**, via a GraphQL interface.
 
@@ -25,9 +25,11 @@ But do note that the **API** application represents much more than a GraphQL int
 Of course, the application can additionally grow in terms of code and cloud infrastructure on your behalf, if need be.
 
 :::info
-Dive deeper by taking a closer look at this project application [in our GitHub repository](https://github.com/webiny/webiny-js/tree/v5/packages/cwp-template-aws/template/api). Note that the provided link is showing both the VPC and non-VPC related files and folder.
+Dive deeper by taking a closer look at this project application [in our GitHub repository](https://github.com/webiny/webiny-js/tree/v5/packages/cwp-template-aws/template/api). Note that the provided link is showing both the default VPC and custom VPC related files and folder.
 :::
 
-## Diagrams
+## Default VPC vs. Custom VPC
 
-<DiagramApi />
+During the creation of a new Webiny project, one of the questions that shows up is should your new project be deployed into the default or a custom Virtual Private Cloud (VPC). The answer to that question depends on your needs, but usually for production environments, having resources deployed in a custom VPC is a reasonable choice. This is mainly because of the fact that this setup helps in improving your application's overall security posture (but it does incur additional cost).
+
+The details on both setups are explained in the [Default VPC](/docs/key-topics/cloud-infrastructure/api/overview-vpc-default) and [Custom VPC](/docs/key-topics/cloud-infrastructure/api/overview-vpc-custom) topics.
