--- a/docs/key-topics/cloud-infrastructure/api/overview-vpc-default.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/overview-vpc-default.mdx
@@ -8,7 +8,6 @@ description: Learn about the necessary cloud infrastructure resources on which t
 
 import Theme from "../../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
-import DiagramApi from "./../components/DiagramApi";
 
 :::tip What you’ll learn
 
@@ -16,18 +15,41 @@ import DiagramApi from "./../components/DiagramApi";
 - the necessary cloud infrastructure resources on which the **API** project application relies on
 :::
 
-## Overview
+## Diagram
 
-The **API** project application represents your project's HTTP API, whose main purpose is to serve the default **Admin Area** and **Website applications**, via a GraphQL interface.
+<!-- vale off -->
 
-But do note that the **API** application represents much more than a GraphQL interface. The default Webiny applications not only extend the application's GraphQL schema, but also bring additional processes and cloud infrastructure resources in order to achieve their goal. For example, in order to store and serve files, and optimize images, the File Manager application brings a couple of dedicated Lambda functions, and an S3 bucket. Another example is the Page Builder application, which also brings a couple of dedicated Lambda functions that deal with prerendering of pages.
+<img
+  src={require("./images/webiny_api_overview_vpc_default.png").default}
+  className="no-shadow"
+  style={{ marginBottom: 20 }}
+  alt="Nice image"
+/>
 
-Of course, the application can additionally grow in terms of code and cloud infrastructure on your behalf, if need be.
+<!-- vale on -->
+
+## Description
+
+During the creation of a new Webiny project, one of the questions that shows up is should your new project be deployed in a Virtual Private Cloud (VPC) or not. The answer to that question depends on your needs, but usually for development environments, having resources deployed in the default VPC is a reasonable choice.
 
 :::info
-Dive deeper by taking a closer look at this project application [in our GitHub repository](https://github.com/webiny/webiny-js/tree/v5/packages/cwp-template-aws/template/api). Note that the provided link is showing both the VPC and non-VPC related files and folder.
+Virtual Private Clouds (VPCs) is a topic that requires some general networking knowledge and knowledge on AWS-specific concepts like regions, availability zones, different network gateways, and so on. Be sure to [read about it](https://aws.amazon.com/vpc/) before going through this section.
+
+You can also check this [Understanding the Default Virtual Private Cloud](https://www.rackspace.com/blog/aws-201-understanding-the-default-virtual-private-cloud) article. It clearly lays out a lot of useful information about AWS's default VPC setup.
 :::
 
-## Diagrams
+In the diagram above, we can see that the default VPC setup (a setup controlled by AWS) consists of three subnets <diagram-letter>c</diagram-letter> <diagram-letter>d</diagram-letter> <diagram-letter>e</diagram-letter> that span across three availability zones (AZs). All of these subnets are public subnets, since they can both receive and send network traffic to the public internet. Note that the number of availability zones may vary, depending on the region you're deploying into (some regions only have two AZs).
 
-<DiagramApi />
+We can also see that Lambda functions are located in all three subnets. This is because, by default, AWS runs Lambda functions in multiple AZs to ensure it is highly available in case of an AZ failure. The same cannot be said for the Amazon ElasticSearch Service <diagram-letter>h</diagram-letter>, which is only deployed in a single AZ <diagram-letter>C</diagram-letter>.
+
+As mentioned, the default VPC setup can be a reasonable choice when it comes to development environments. But for production, since some of the cloud infrastructure resources may require that they are not exposed to the public internet, the [Custom VPC](/docs/key-topics/cloud-infrastructure/api/overview-vpc-custom) may be a better solution.
+
+## FAQ
+
+**Is Amazon ElasticSearch Service <diagram-letter>h</diagram-letter> deployed into multiple AZs?**
+
+Currently it is deployed into a single AZ, just for cost reasons. But yes, production workloads should use two or three AZs. Check out the [Amazon ElasticSearch Service's FAQ page](https://aws.amazon.com/elasticsearch-service/faqs/) for more information.
+
+**Is it possible to switch from the custom VPC to the default VPC setup?**
+
+Yes, you'd just need to alter the cloud infrastructure code accordingly, and redeploy. This can probably be considered as a bigger change to your cloud infrastructure, so make sure to test the deployment before applying changes in your production environment. The [`--preview` flag](/docs/how-to-guides/deployment/preview-deployments) can also come in handy when doing this.
