--- a/docs/key-topics/cloud-infrastructure/website/introduction.mdx
+++ b/docs/key-topics/cloud-infrastructure/website/introduction.mdx
@@ -1,14 +1,13 @@
 ---
-id: website
-title: Website
-sidebar_label: Website
+id: introduction
+title: Introduction
+sidebar_label: Introduction
 keywords: ["cloud", "infrastructure", "vpc", "website", "lambda", "database", "s3", "storage", "diagram"]
 description: Learn about the necessary cloud infrastructure resources on which the Website project application relies on.
 ---
 
-import Theme from "../../mdxComponents/theme";
+import Theme from "../../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
-import DiagramWebsite from "./components/DiagramWebsite";
 
 :::tip What you’ll learn
 
@@ -16,13 +15,13 @@ import DiagramWebsite from "./components/DiagramWebsite";
 - the necessary cloud infrastructure resources on which the **Website** project application relies on
 :::
 
-## Overview
+## The Website project application
 
 The **Website** project application represents your public website.
 
 In terms of the code the application holds, essentially, we're talking about a classic React application that renders pages created using the Page Builder application.
 
-In terms of the necessary cloud infrastructure, things are not as simple as it's the case with the [Admin Area](/docs/key-topics/cloud-infrastructure/admin) project application. Basically, public websites do not work well if they are served as a classic React single-page-application (SPA) that's relying on the client-side rendering approach.
+In terms of the necessary cloud infrastructure, things are not as simple as it's the case with the [Admin Area](/docs/key-topics/cloud-infrastructure/admin/introduction) project application. Basically, public websites do not work well if they are served as a classic React single-page-application (SPA) that's relying on the client-side rendering approach.
 
 This is because of the following two factors:
 
@@ -44,8 +43,3 @@ So, the cloud infrastructure contains additional resources and it also depends o
 :::info
 Dive deeper by taking a closer look at this project application [in our GitHub repository](https://github.com/webiny/webiny-js/tree/v5/packages/cwp-template-aws/template/apps/website).
 :::
-
-## Diagrams
-
-<DiagramWebsite />
-
