--- a/docs/key-topics/cloud-infrastructure/website/prerendering.mdx
+++ b/docs/key-topics/cloud-infrastructure/website/prerendering.mdx
@@ -1,3 +1,33 @@
+---
+id: prerendering
+title: Prerendering
+sidebar_label: Prerendering
+keywords: ["cloud", "infrastructure", "vpc", "admin", "administration", "lambda", "database", "s3", "storage", "diagram"]
+description: Learn about the necessary cloud infrastructure resources on which the Admin Area project application relies on.
+---
+
+import Theme from "../../../mdxComponents/theme";
+import { Box, Button, Grid, Link } from "theme-ui";
+
+:::tip What you’ll learn
+
+- what does the **Admin Area** project application represent
+- the necessary cloud infrastructure resources on which the **Admin Area** project application relies on
+:::
+
+## Diagram
+
+<!-- vale off -->
+
+<img
+  src={require("./images/webiny_website_prerendering.png").default}
+  className="no-shadow"
+  style={{ marginBottom: 20 }}
+  alt="Nice image"
+/>
+
+<!-- vale on -->
+
 ## Description
 
 The diagram shows how the Prerendering Service, located in the **API** project application <diagram-letter>E</diagram-letter>, interacts with the **Website** application's cloud infrastructure, in order to prerender pages and store static HTML and related data files into the Amazon S3 bucket <diagram-letter>B</diagram-letter>, ready to be served to actual website users.
