--- a/docs/key-topics/cloud-infrastructure/website/serving.mdx
+++ b/docs/key-topics/cloud-infrastructure/website/serving.mdx
@@ -1,3 +1,33 @@
+---
+id: serving
+title: Serving Pages
+sidebar_label: Serving Pages
+keywords: ["cloud", "infrastructure", "vpc", "admin", "administration", "lambda", "database", "s3", "storage", "diagram"]
+description: Learn about the necessary cloud infrastructure resources on which the Admin Area project application relies on.
+---
+
+import Theme from "../../../mdxComponents/theme";
+import { Box, Button, Grid, Link } from "theme-ui";
+
+:::tip What you’ll learn
+
+- what does the **Admin Area** project application represent
+- the necessary cloud infrastructure resources on which the **Admin Area** project application relies on
+:::
+
+## Diagram
+
+<!-- vale off -->
+
+<img
+  src={require("./images/webiny_website_visit.png").default}
+  className="no-shadow"
+  style={{ marginBottom: 20 }}
+  alt="Nice image"
+/>
+
+<!-- vale on -->
+
 ## Description
 
 The diagram shows how pages, prerendered as part of the **Prerendering Pages** flow, are served to actual website visitors.
