--- a/docs/key-topics/deployment/introduction.mdx
+++ b/docs/key-topics/deployment/introduction.mdx
@@ -23,7 +23,7 @@ This key topics section provides general information on deployments, how they wo
 Project deployment is an important part of an application development lifecycle.
 
 <!-- vale off -->
-Essentially, deploying your project entails the deployment of necessary cloud infrastructure resources with the application code you wrote. It can be done from your machine directly, which is usually the case when developing, or from a remote environment for example CI/CD systems, that, based on provided instructions, deploy your project automatically for you.
+Essentially, deploying your project entails the deployment of necessary cloud infrastructure resources with the application code you wrote. It can be done from your machine directly, which is usually the case when developing, or from a remote environment, for example CI/CD systems, that, based on provided instructions, deploy your project automatically for you.
 <!-- vale on -->
 
 Whatever the case, Webiny makes it easy to both build and deploy your project, using the [Webiny CLI](/docs/key-topics/webiny-cli) and [Pulumi](/docs/key-topics/deployment/iac-with-pulumi) as the default infrastructure as code and deployment solution. Additionally, without any special configuration, you can also easily deploy your project into multiple [environments](/docs/key-topics/deployment/environments).
