fix: update keywords and "what you'll learn"

--- a/docs/key-topics/cloud-infrastructure/admin/overview.mdx
+++ b/docs/key-topics/cloud-infrastructure/admin/overview.mdx
@@ -2,7 +2,7 @@
 id: overview
 title: Overview
 sidebar_label: Overview
-keywords: ["cloud", "infrastructure", "vpc", "admin", "administration", "lambda", "database", "s3", "storage", "diagram"]
+keywords: ["cloud", "infrastructure", "admin", "administration", "overview"]
 description: Learn about the necessary cloud infrastructure resources on which the Admin Area project application relies on.
 ---
 
@@ -10,8 +10,6 @@ import Theme from "../../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you’ll learn
-
-- what does the **Admin Area** project application represent
 - the necessary cloud infrastructure resources on which the **Admin Area** project application relies on
 :::
 
@@ -23,7 +21,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
   src={require("./images/webiny_admin_overview.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
-  alt="Nice image"
+  alt="Webiny Cloud Infrastructure - Admin Area - Overview"
 />
 
 <!-- vale on -->
