--- a/docs/key-topics/cloud-infrastructure/admin/serving-application-files.mdx
+++ b/docs/key-topics/cloud-infrastructure/admin/serving-application-files.mdx
@@ -1,18 +1,16 @@
 ---
-id: page-visit
+id: serving-application-files
 title: Serving Application Files
 sidebar_label: Serving Application
-keywords: ["cloud", "infrastructure", "vpc", "admin", "administration", "lambda", "database", "s3", "storage", "diagram"]
-description: Learn about the necessary cloud infrastructure resources on which the Admin Area project application relies on.
+keywords: ["cloud", "infrastructure", "admin", "administration", "serving", "files", "static", "assets"]
+description: Learn how are React application files served via the deployed cloud infrastructure.
 ---
 
 import Theme from "../../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you’ll learn
-
-- what does the **Admin Area** project application represent
-- the necessary cloud infrastructure resources on which the **Admin Area** project application relies on
+- how are React application files served via the deployed cloud infrastructure
 :::
 
 ## Diagram
@@ -23,7 +21,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
   src={require("./images/webiny_admin_page_visit.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
-  alt="Nice image"
+  alt="Webiny Cloud Infrastructure - Admin Area - Serving Application Files"
 />
 
 <!-- vale on -->
