--- a/docs/key-topics/cloud-infrastructure/api/overview-vpc-custom.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/overview-vpc-custom.mdx
@@ -2,17 +2,15 @@
 id: overview-vpc-custom
 title: Custom VPC
 sidebar_label: Custom VPC
-keywords: ["cloud", "infrastructure", "api", "vpc", "lambda", "database", "s3", "storage", "diagram"]
-description: Learn about the necessary cloud infrastructure resources on which the API project application relies on.
+keywords: ["cloud", "infrastructure", "api", "custom", "vpc", diagram"]
+description: Learn how the necessary cloud infrastructure resources are deployed within the custom VPC.
 ---
 
 import Theme from "../../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you’ll learn
-
-- what does the **API** project application represent
-- the necessary cloud infrastructure resources on which the **API** project application relies on
+- how the necessary cloud infrastructure resources are deployed within a custom VPC
 :::
 
 ## Diagram
@@ -23,7 +21,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
   src={require("./images/webiny_api_overview_vpc_custom.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
-  alt="Nice image"
+  alt="Webiny Cloud Infrastructure - API - Custom VPC"
 />
 
 <!-- vale on -->
@@ -60,8 +58,6 @@ Note that the number of distinct AZs depends on the region you're deploying to a
 :::danger
 Have in mind that hosting your application in multiple availability zones may incur additional cost, since some of the cloud infrastructure resources need to be deployed multiple times. For example, this is true for Amazon ElasticSearch Service <diagram-letter>h</diagram-letter>.
 :::
-
-
 
 #### External internet-facing cloud infrastructure resources
 The only way resources located in the private subnets <diagram-letter>D</diagram-letter> <diagram-letter>e</diagram-letter> can talk to the public internet is via the public subnet <diagram-letter>C</diagram-letter>, which includes a NAT gateway <diagram-letter>F</diagram-letter>. The NAT (network address translation) gateway is the middleman that forwards all internet-routable network traffic, received from private subnets, to the Internet Gateway <diagram-letter>g</diagram-letter>.
