--- a/docs/key-topics/cloud-infrastructure/api/overview-vpc-default.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/overview-vpc-default.mdx
@@ -2,17 +2,15 @@
 id: overview-vpc-default
 title: Default VPC
 sidebar_label: Default VPC
-keywords: ["cloud", "infrastructure", "api", "vpc", "lambda", "database", "s3", "storage", "diagram"]
-description: Learn about the necessary cloud infrastructure resources on which the API project application relies on.
+keywords: ["cloud", "infrastructure", "api", "default", "vpc", diagram"]
+description: Learn how the necessary cloud infrastructure resources are deployed within the default VPC.
 ---
 
 import Theme from "../../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you’ll learn
-
-- what does the **API** project application represent
-- the necessary cloud infrastructure resources on which the **API** project application relies on
+- how the necessary cloud infrastructure resources are deployed within the default VPC
 :::
 
 ## Diagram
@@ -23,7 +21,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
   src={require("./images/webiny_api_overview_vpc_default.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
-  alt="Nice image"
+  alt="Webiny Cloud Infrastructure - API - Default VPC"
 />
 
 <!-- vale on -->
