--- a/docs/key-topics/cloud-infrastructure/introduction.mdx
+++ b/docs/key-topics/cloud-infrastructure/introduction.mdx
@@ -11,6 +11,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you’ll learn
 - what are the default project applications, included in a newly created Webiny project
+- what is the most complex project application, in terms of deployed cloud infrastructure
 :::
 
 ## Overview
