--- a/docs/key-topics/cloud-infrastructure/website/introduction.mdx
+++ b/docs/key-topics/cloud-infrastructure/website/introduction.mdx
@@ -2,17 +2,17 @@
 id: introduction
 title: Introduction
 sidebar_label: Introduction
-keywords: ["cloud", "infrastructure", "vpc", "website", "lambda", "database", "s3", "storage", "diagram"]
-description: Learn about the necessary cloud infrastructure resources on which the Website project application relies on.
+keywords: ["cloud", "infrastructure", "admin", "administration"]
+description: Learn what does the Website project application represent.
 ---
 
 import Theme from "../../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you’ll learn
-
 - what does the **Website** project application represent
-- the necessary cloud infrastructure resources on which the **Website** project application relies on
+- what are the common problems when serving a public website
+- briefly, how Webiny approaches these problems
 :::
 
 ## The Website project application
@@ -38,7 +38,7 @@ Because of this, Webiny developed its own **Prerendering Service**, which preren
 The explanation on prerendering of pages, presented above, is a very brief one. This is intentional, as this key topic is focused on the cloud infrastructure Webiny deploys and not on the prerendering itself. If you want to learn more about how the Page Builder application handles page rendering, visit the [Prerendering Pages](/docs/key-topics/page-builder/prerendering-pages) key topic.
 :::
 
-So, the cloud infrastructure contains additional resources and it also depends on the **API** project application, which hosts the mentioned **Prerendering service** and which coordinates the whole process. All this, and more, is examined in the diagrams below.
+So, the cloud infrastructure contains additional resources and it also depends on the **API** project application, which hosts the mentioned **Prerendering service** and which coordinates the whole process. All this, and more, is examined in the following topics.
 
 :::info
 Dive deeper by taking a closer look at this project application [in our GitHub repository](https://github.com/webiny/webiny-js/tree/v5/packages/cwp-template-aws/template/apps/website).
