--- a/docs/key-topics/cloud-infrastructure/website/prerendering-pages.mdx
+++ b/docs/key-topics/cloud-infrastructure/website/prerendering-pages.mdx
@@ -1,9 +1,9 @@
 ---
-id: prerendering
-title: Prerendering
-sidebar_label: Prerendering
-keywords: ["cloud", "infrastructure", "vpc", "admin", "administration", "lambda", "database", "s3", "storage", "diagram"]
-description: Learn about the necessary cloud infrastructure resources on which the Admin Area project application relies on.
+id: prerendering-pages
+title: Prerendering Pages
+sidebar_label: Prerendering Pages
+keywords: ["cloud", "infrastructure", "admin", "administration", "prerendering", "pages"]
+description: Learn how the prerendering service, hosted in the API project application, relies on the Website project application to perform page prerendering.
 ---
 
 import Theme from "../../../mdxComponents/theme";
@@ -11,8 +11,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you’ll learn
 
-- what does the **Admin Area** project application represent
-- the necessary cloud infrastructure resources on which the **Admin Area** project application relies on
+- how the Prerendering Service (located in the **API** project application) utilizes **Website**'s cloud infrastructure resources in order to prerender your public website's pages and store their HTML and relevant metadata
 :::
 
 ## Diagram
@@ -23,7 +22,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
   src={require("./images/webiny_website_prerendering.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
-  alt="Nice image"
+  alt="Webiny Cloud Infrastructure - Website - Prerendering"
 />
 
 <!-- vale on -->
