--- a/docs/key-topics/cloud-infrastructure/website/serving-pages.mdx
+++ b/docs/key-topics/cloud-infrastructure/website/serving-pages.mdx
@@ -1,9 +1,9 @@
 ---
-id: serving
+id: serving-pages
 title: Serving Pages
 sidebar_label: Serving Pages
-keywords: ["cloud", "infrastructure", "vpc", "admin", "administration", "lambda", "database", "s3", "storage", "diagram"]
-description: Learn about the necessary cloud infrastructure resources on which the Admin Area project application relies on.
+keywords: ["cloud", "infrastructure", "admin", "administration", "serving", "pages"]
+description: Learn how the prerendered pages are statically served to actual website visitors.
 ---
 
 import Theme from "../../../mdxComponents/theme";
@@ -11,8 +11,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you’ll learn
 
-- what does the **Admin Area** project application represent
-- the necessary cloud infrastructure resources on which the **Admin Area** project application relies on
+- how the previously prerendered pages are statically served to actual website visitors
 :::
 
 ## Diagram
@@ -23,7 +22,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
   src={require("./images/webiny_website_visit.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
-  alt="Nice image"
+  alt="Webiny Cloud Infrastructure - Website - Serving Pages"
 />
 
 <!-- vale on -->
