--- a/docs/key-topics/deployment/environments.mdx
+++ b/docs/key-topics/deployment/environments.mdx
@@ -42,7 +42,7 @@ Every project application can be deployed into several different environments. F
   src={require("./assets/environments.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
-  alt="Nice image"
+  alt="Environments."
 />
 
 <!-- vale on -->
