--- a/docs/key-topics/deployment/introduction.mdx
+++ b/docs/key-topics/deployment/introduction.mdx
@@ -44,7 +44,7 @@ With that in mind, it's important to note that when talking about deployments, w
   src={require("./assets/deploy-applications.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
-  alt="Nice image"
+  alt="Deploying project applications, not projects."
 />
 
 <!-- vale on -->
@@ -64,7 +64,7 @@ Although it might sound simple enough, one thing we still have to take into cons
   src={require("./assets/dependent-applications.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
-  alt="Nice image"
+  alt="Dependent project applications."
 />
 
 <!-- vale on -->
