--- a/docs/key-topics/project-organisation.mdx
+++ b/docs/key-topics/project-organisation.mdx
@@ -36,7 +36,7 @@ The following diagram shows the project organization in a simplified and clear m
   src={require("./assets/project-organization/project-organization.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
-  alt="Nice image"
+  alt="Project Organization"
 />
 
 <!-- vale on -->
@@ -93,7 +93,7 @@ The same can happen with project applications. For example, let's say you have a
   src={require("./assets/project-organization/dependent-packages-apps.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
-  alt="Nice image"
+  alt="Dependent Packages and Applications"
 />
 
 <!-- vale on -->
