--- a/docs/key-topics/technologies.mdx
+++ b/docs/key-topics/technologies.mdx
@@ -17,7 +17,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
   src={require("./assets/technologies/logos.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
-  alt="Nice image"
+  alt="Technologies used"
 />
 
 <!-- vale on -->
