--- a/docs/key-topics/cloud-infrastructure/admin/introduction.mdx
+++ b/docs/key-topics/cloud-infrastructure/admin/introduction.mdx
@@ -2,17 +2,15 @@
 id: introduction
 title: Introduction
 sidebar_label: Introduction
-keywords: ["cloud", "infrastructure", "vpc", "admin", "administration", "lambda", "database", "s3", "storage", "diagram"]
-description: Learn about the necessary cloud infrastructure resources on which the Admin Area project application relies on.
+keywords: ["cloud", "infrastructure", "admin", "administration"]
+description: Learn what does the Admin Area project application represent.
 ---
 
 import Theme from "../../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you’ll learn
-
 - what does the **Admin Area** project application represent
-- the necessary cloud infrastructure resources on which the **Admin Area** project application relies on
 :::
 
 ## The Admin Area Project Application
