--- a/docs/key-topics/cloud-infrastructure/api/graphql-requests.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/graphql-requests.mdx
@@ -2,7 +2,7 @@
 id: graphql-requests
 title: GraphQL Requests
 sidebar_label: GraphQL Requests
-keywords: ["cloud", "infrastructure", "api", "vpc", "lambda", "database", "s3", "storage", "diagram"]
+keywords: ["cloud", "infrastructure", "api", "graphql", "http", "requests", "lambda", "database", "s3", "storage", "diagram"]
 description: Learn about the necessary cloud infrastructure resources on which the API project application relies on.
 ---
 
@@ -10,9 +10,7 @@ import Theme from "../../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you’ll learn
-
-- what does the **API** project application represent
-- the necessary cloud infrastructure resources on which the **API** project application relies on
+- how GraphQL HTTP requests are handled by the deployed cloud infrastructure and application code
 :::
 
 ## Diagram
@@ -23,7 +21,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
   src={require("./images/webiny_api_gql_request.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
-  alt="Nice image"
+  alt="Webiny Cloud Infrastructure - API - GraphQL Requests"
 />
 
 <!-- vale on -->
