--- a/docs/key-topics/cloud-infrastructure/api/introduction.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/introduction.mdx
@@ -2,8 +2,7 @@
 id: introduction
 title: Introduction
 sidebar_label: Introduction
-keywords:
-  ["cloud", "infrastructure", "api", "vpc", "lambda", "database", "s3", "storage", "diagram"]
+keywords: ["cloud", "infrastructure", "api", "introduction", "lambda", "database", "s3", "storage", "diagram"]
 description: Learn about the necessary cloud infrastructure resources on which the API project application relies on.
 ---
 
@@ -13,7 +12,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
 :::tip What you’ll learn
 
 - what does the **API** project application represent
-- the necessary cloud infrastructure resources on which the **API** project application relies on
+- gain awareness about the default VPC and custom VPC deployments
 :::
 
 ## The API Project Application
