--- a/docs/key-topics/cloud-infrastructure/api/overview.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/overview.mdx
@@ -2,7 +2,7 @@
 id: overview
 title: Overview
 sidebar_label: Overview
-keywords: ["cloud", "infrastructure", "api", "vpc", "lambda", "database", "s3", "storage", "diagram"]
+keywords: ["cloud", "infrastructure", "api", "overview", "lambda", "database", "s3", "storage", "diagram"]
 description: Learn about the necessary cloud infrastructure resources on which the API project application relies on.
 ---
 
@@ -10,9 +10,7 @@ import Theme from "../../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you’ll learn
-
-- what does the **API** project application represent
-- the necessary cloud infrastructure resources on which the **API** project application relies on
+- what are the necessary cloud infrastructure resources on which the **API** project application relies on
 :::
 
 ## Diagram
@@ -23,7 +21,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
   src={require("./images/webiny_api_overview.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
-  alt="Nice image"
+  alt="Webiny Cloud Infrastructure - API - Overview"
 />
 
 :::info
