--- a/docs/key-topics/cloud-infrastructure/website/overview.mdx
+++ b/docs/key-topics/cloud-infrastructure/website/overview.mdx
@@ -2,17 +2,15 @@
 id: overview
 title: Overview
 sidebar_label: Overview
-keywords: ["cloud", "infrastructure", "vpc", "admin", "administration", "lambda", "database", "s3", "storage", "diagram"]
-description: Learn about the necessary cloud infrastructure resources on which the Admin Area project application relies on.
+keywords: ["cloud", "infrastructure", "admin", "administration", "overview"]
+description: Learn about the necessary cloud infrastructure resources on which the Website project application relies on.
 ---
 
 import Theme from "../../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you’ll learn
-
-- what does the **Admin Area** project application represent
-- the necessary cloud infrastructure resources on which the **Admin Area** project application relies on
+- the necessary cloud infrastructure resources on which the **Website** project application relies on
 :::
 
 ## Diagram
@@ -23,7 +21,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
   src={require("./images/webiny_website_overview.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
-  alt="Nice image"
+  alt="Webiny Cloud Infrastructure - Website - Overview"
 />
 
 <!-- vale on -->
@@ -39,7 +37,7 @@ As we can see, the cloud infrastructure consists of five resources - two Amazon 
 The **API** project application is included in the diagram because this is the application that's hosting the mentioned **Prerendering Service**, which coordinates the whole prerendering process.
 
 :::info
-To learn more about the API project application's cloud infrastructure, check out the [API](/docs/key-topics/cloud-infrastructure/api/overview) section.
+To learn more about the API project application's cloud infrastructure, check out the [API](/docs/key-topics/cloud-infrastructure/api/introduction) section.
 :::
 
 Select the **Prerendering Pages** diagram in the above diagram selector to see how it works.
