fix: reword text

--- a/docs/key-topics/cloud-infrastructure/website/introduction.mdx
+++ b/docs/key-topics/cloud-infrastructure/website/introduction.mdx
@@ -38,7 +38,7 @@ Because of this, Webiny developed its own **Prerendering Service**, which preren
 The explanation on prerendering of pages, presented above, is a very brief one. This is intentional, as this key topic is focused on the cloud infrastructure Webiny deploys and not on the prerendering itself. If you want to learn more about how the Page Builder application handles page rendering, visit the [Prerendering Pages](/docs/key-topics/page-builder/prerendering-pages) key topic.
 :::
 
-So, the cloud infrastructure contains additional resources and it also depends on the **API** project application, which hosts the mentioned **Prerendering service** and which coordinates the whole process. All this, and more, is examined in the following topics.
+So, the cloud infrastructure contains additional resources and it also depends on the **API** project application, which hosts the mentioned **Prerendering service** and which coordinates the complete prerendering process. All this, and more, is examined in the following topics.
 
 :::info
 Dive deeper by taking a closer look at this project application [in our GitHub repository](https://github.com/webiny/webiny-js/tree/v5/packages/cwp-template-aws/template/apps/website).
