fix: reword question

--- a/docs/key-topics/cloud-infrastructure/api/overview-vpc-default.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/overview-vpc-default.mdx
@@ -48,6 +48,6 @@ As mentioned, the default VPC setup can be a reasonable choice when it comes to 
 
 Currently it is deployed into a single AZ, just for cost reasons. But yes, production workloads should use two or three AZs. Check out the [Amazon ElasticSearch Service's FAQ page](https://aws.amazon.com/elasticsearch-service/faqs/) for more information.
 
-**Is it possible to switch from the custom VPC to the default VPC setup?**
+**Is it possible to switch from the default VPC to the custom VPC setup?**
 
 Yes, you'd just need to alter the cloud infrastructure code accordingly, and redeploy. This can probably be considered as a bigger change to your cloud infrastructure, so make sure to test the deployment before applying changes in your production environment. The [`--preview` flag](/docs/how-to-guides/deployment/preview-deployments) can also come in handy when doing this.
