--- a/docs/key-topics/cloud-infrastructure/api/overview.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/overview.mdx
@@ -39,7 +39,7 @@ The diagram gives an overview of the complete cloud infrastructure that is deplo
 5. Form Builder
 6. Headless CMS
 
-In the following text, we briefly cover how each of the default Webiny applications is utilizing the shown cloud infrastructure.
+In the following text, we briefly cover how each of the default Webiny applications are utilizing the shown cloud infrastructure.
 
 #### 1. Security
 
