fix: add environments note

--- a/docs/key-topics/cloud-infrastructure/api/introduction.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/introduction.mdx
@@ -29,6 +29,12 @@ Dive deeper by taking a closer look at this project application [in our GitHub r
 
 ## Default VPC vs. Custom VPC
 
-During the creation of a new Webiny project, one of the questions that shows up is should your new project be deployed into the default or a custom Virtual Private Cloud (VPC). The answer to that question depends on your needs, but usually for production environments, having resources deployed in a custom VPC is a reasonable choice. This is mainly because of the fact that this setup helps in improving your application's overall security posture (but it does incur additional cost).
+During the creation of a new Webiny project, one of the questions that shows up is should your new project be deployed into the default or a custom Virtual Private Cloud (VPC).
+
+The answer to that question depends on your needs, but usually, for production environments, having resources deployed in a custom VPC is a reasonable choice. This is mainly because of the fact that this setup helps in improving your application's overall security posture (but it does incur additional cost). On the other hand, if we're talking about a development or preview environment, it's also reasonable to pick the default VPC deployment.
+
+:::info
+To learn more about environments, visit the [Environments](/docs/key-topics/deployment/environments) key topic.
+:::
 
 The details on both setups are explained in the [Default VPC](/docs/key-topics/cloud-infrastructure/api/overview-vpc-default) and [Custom VPC](/docs/key-topics/cloud-infrastructure/api/overview-vpc-custom) topics.
