--- a/docs/key-topics/webiny-cli.mdx
+++ b/docs/key-topics/webiny-cli.mdx
@@ -2,12 +2,12 @@
 id: webiny-cli
 title: Webiny CLI
 sidebar_label: Webiny CLI
-keywords: ["webiny", "stacks", "deployment", "pulumi", "iac"]
-description: Cloud Infrastructure
+keywords: ["webiny", "cli", "development"]
+description: Learn what Webiny CLI is and how it can help you in your project development.
 ---
 
 import Theme from "../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
-Work in progress.
+This article is work in progress. Please be patient for just a little bit.
 
