fix: reword sentences

--- a/docs/how-to-guides/deployment/destroy-your-project.mdx
+++ b/docs/how-to-guides/deployment/destroy-your-project.mdx
@@ -3,11 +3,11 @@ id: destroy-your-project
 title: Destroy Cloud Infrastructure
 sidebar_label: Destroy Cloud Infrastructure
 keywords: ["destroy", "project", "application", "CLI"]
-description: Learn how to destroy your Webiny project and its project applications, using the Webiny CLI.
+description: Learn how to destroy the cloud infrastructure deployed for your project applications, using the Webiny CLI.
 ---
 
 :::tip What you’ll learn
-- how to destroy cloud infrastructure deployed by project applications, possibly into multiple environments
+- how to destroy cloud infrastructure previously deployed for project applications (possibly into multiple environments)
 :::
 
 ## The `destroy` command
