feat: add preview deployment guide

--- a/docs/how-to-guides/deployment/preview-deployments.mdx
+++ b/docs/how-to-guides/deployment/preview-deployments.mdx
@@ -19,7 +19,27 @@ When doing more significant changes like reconfiguring and destroying cloud infr
 
 ## The Preview Flag
 
-In order to avoid performing unintended cloud infrastructure changes, you can use the preview flag when executing the [deploy](/docs/how-to-guides/deployment/deploy-your-project) command.
+In order to avoid performing unintended cloud infrastructure changes, you can use the preview flag when executing the [app deploy](/docs/how-to-guides/deployment/deploy-your-project#the-app-deploy-command) and [app destroy](/docs/how-to-guides/deployment/destroy-your-project#the-app-destroy-command) commands. Consider the following examples:
+
+```
+webiny app deploy api --env dev --preview
+webiny app deploy apps/admin --env dev --preview
+webiny app destroy api --env dev --preview
+webiny app destroy apps/admin --env dev --preview
+```
+
+Executing these commands won't perform any actual deployment. It will just print out the changes that would happen, for example:
+
+<!-- vale off -->
+
+<img
+  src={require("./assets/preview-deployments/preview-terminal.png").default}
+  className="no-shadow"
+  style={{ borderRadius: 0 }}
+  alt="Previewing Deploy Command"
+/>
+
+<!-- vale on -->
 
 ## FAQ
 **Does the preview flag work with the [`deploy`](/docs/how-to-guides/deployment/deploy-your-project#the-deploy-command) and [`destroy`](/docs/how-to-guides/deployment/destroy-your-project#the-destroy-command) command?**
