--- a/docs/how-to-guides/deployment/configure-aws-credentials.mdx
+++ b/docs/how-to-guides/deployment/configure-aws-credentials.mdx
@@ -1,7 +1,7 @@
 ---
 id: configure-aws-credentials
-title: Configure AWS credentials
-sidebar_label: Configure AWS credentials
+title: Configure AWS Credentials
+sidebar_label: Configure AWS Credentials
 keywords: ["webiny", "serverless", "open source", "graphql", "reactjs"]
 description: Configure AWS credentials.
 ---
