--- a/docs/how-to-guides/deployment/preview-deployments.mdx
+++ b/docs/how-to-guides/deployment/preview-deployments.mdx
@@ -15,11 +15,11 @@ description: Learn how to preview cloud infrastructure deployments, before actua
 
 During the project development, there is a chance that the deployed cloud infrastructure needs to change. New resources might be added, existing resources configured differently, and some may even need to be destroyed.
 
-When doing more significant changes like reconfiguring and destroying cloud infrastructure resources, it might be helpful to preview the deployment process that you're about to execute. More specifically, you would certainly like to know if the deployment you're about to execute will destroy any of the mission-critical resources, e.g. a database or file storage resource.
+When doing more significant changes, it might be helpful to preview the deployment process that you're about to execute. More specifically, you would certainly like to know if the deployment you're about to execute might destroy any of the mission-critical resources, e.g. a database or file storage resource.
 
 ## The Preview Flag
 
-In order to avoid performing unintended cloud infrastructure changes, you can use the preview flag when executing the [app deploy](/docs/how-to-guides/deployment/deploy-your-project#the-app-deploy-command) and [app destroy](/docs/how-to-guides/deployment/destroy-your-project#the-app-destroy-command) commands. Consider the following examples:
+In order to avoid performing unintended cloud infrastructure changes, you can use the preview flag upon executing the [app deploy](/docs/how-to-guides/deployment/deploy-your-project#the-app-deploy-command) and [app destroy](/docs/how-to-guides/deployment/destroy-your-project#the-app-destroy-command) commands. Consider the following examples:
 
 ```
 webiny app deploy api --env dev --preview
@@ -28,7 +28,7 @@ webiny app destroy api --env dev --preview
 webiny app destroy apps/admin --env dev --preview
 ```
 
-Executing these commands won't perform any actual deployment. It will just print out the changes that would happen, for example:
+Executing these commands won't perform any changes to your cloud infrastructure resources. They just print the changes that would be applied, for example:
 
 <!-- vale off -->
 
