fix: reword sentences

--- a/docs/how-to-guides/deployment/preview-deployments.mdx
+++ b/docs/how-to-guides/deployment/preview-deployments.mdx
@@ -15,7 +15,7 @@ description: Learn how to preview cloud infrastructure deployments, before actua
 
 During the project development, there is a chance that the deployed cloud infrastructure needs to change. New resources might be added, existing resources configured differently, and some may even need to be destroyed.
 
-When doing more significant changes, it might be helpful to preview the deployment process that you're about to execute. More specifically, you would certainly like to know if the deployment you're about to execute might destroy any of the mission-critical resources, e.g. a database or file storage resource.
+When doing more significant changes, it might be helpful to preview the deployment process that you're about to execute. More specifically, you would certainly like to know if the deployment you're about to execute destroys a mission-critical resource, e.g. a database or a file storage resource.
 
 ## The Preview Flag
 
