fix: remove mentions of destroy command

--- a/docs/how-to-guides/deployment/preview-deployments.mdx
+++ b/docs/how-to-guides/deployment/preview-deployments.mdx
@@ -19,16 +19,15 @@ When doing more significant changes, it might be helpful to preview the deployme
 
 ## The Preview Flag
 
-In order to avoid performing unintended cloud infrastructure changes, you can use the preview flag upon executing the [app deploy](/docs/how-to-guides/deployment/deploy-your-project#the-app-deploy-command) and [app destroy](/docs/how-to-guides/deployment/destroy-your-project#the-app-destroy-command) commands. Consider the following examples:
+In order to avoid performing unintended cloud infrastructure changes, you can use the preview flag upon executing the [app deploy](/docs/how-to-guides/deployment/deploy-your-project#the-app-deploy-command) command. Consider the following examples:
 
 ```
 webiny app deploy api --env dev --preview
 webiny app deploy apps/admin --env dev --preview
-webiny app destroy api --env dev --preview
-webiny app destroy apps/admin --env dev --preview
+webiny app deploy apps/website --env dev --preview
 ```
 
-Executing these commands won't perform any changes to your cloud infrastructure resources. They just print the changes that would be applied, for example:
+Executing these commands won't perform any changes to your cloud infrastructure resources. They would just list all of the changes that would be applied, for example:
 
 <!-- vale off -->
 
@@ -42,6 +41,6 @@ Executing these commands won't perform any changes to your cloud infrastructure 
 <!-- vale on -->
 
 ## FAQ
-**Does the preview flag work with the [`deploy`](/docs/how-to-guides/deployment/deploy-your-project#the-deploy-command) and [`destroy`](/docs/how-to-guides/deployment/destroy-your-project#the-destroy-command) command?**
+**Does the preview flag work with the [`deploy`](/docs/how-to-guides/deployment/deploy-your-project#the-deploy-command) command?**
 
-The preview flag only works with the `app deploy` and `app destroy` commands, shown in this guide.
+The preview flag only works with the `app deploy` command, shown in this guide.
