fix: improve directory tree preview

--- a/docs/key-topics/project-organisation.mdx
+++ b/docs/key-topics/project-organisation.mdx
@@ -48,17 +48,31 @@ If we were to translate the above diagram into a simplified directory tree, we w
 ├── Project Application 1
 │   └── code
 │       ├── package-1a
+│       │   ├── src
+│       │   └── package.json
 │       ├── package-1b
+│       │   ├── src
+│       │   └── package.json
 │       └── package-1c
+│       │   ├── src
+│       │   └── package.json
 │  
 ├── Project Application 2
 │   └── code
 │       ├── package-2a
+│       │   ├── src
+│       │   └── package.json
 │       └── package-2b
+│       │   ├── src
+│       │   └── package.json
 │  
 ├── packages
 │   ├── shared-package-1
+│       │   ├── src
+│       │   └── package.json
 │   └── shared-package-2
+│       │   ├── src
+│       │   └── package.json
 └── (...)
 ```
 
