fix: update title, add an FAQ item

--- a/docs/how-to-guides/upgrade-webiny.mdx
+++ b/docs/how-to-guides/upgrade-webiny.mdx
@@ -1,9 +1,9 @@
 ---
-id: upgrading
-title: Upgrading Webiny
-sidebar_label: Upgrading Webiny
+id: upgrade-webiny
+title: Upgrade Webiny
+sidebar_label: Upgrade Webiny
 keywords: ["webiny", "version", "upgrade"]
-description: Learn how to upgrade your Webiny project to latest version.
+description: Learn how to upgrade your Webiny project.
 ---
 
 import Theme from "./../mdxComponents/theme";
@@ -54,6 +54,10 @@ yarn upgrade-interactive
 ```
 
 ## FAQ
+
+**Once upgraded, do we need to re-deploy the Webiny project in order to see the changes?**
+
+Yes, once you've completed the upgrade steps, in order to actually see the new features and fixes online, you need to re-deploy you project. Which project applications you need to re-deploy? It depends on the released fixes and features, but the easiest approach would be just to deploy the entire project, using the [`yarn webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project#the-deploy-command) command.
 
 **How can we check what's the version of Webiny we're currently at?**
 
