--- a/docs/how-to-guides/upgrade-webiny.mdx
+++ b/docs/how-to-guides/upgrade-webiny.mdx
@@ -59,6 +59,8 @@ yarn upgrade-interactive
 
 Yes, once you've completed the upgrade steps, in order to actually see the new features and fixes online, you need to re-deploy you project. Which project applications you need to re-deploy? It depends on the released fixes and features, but the easiest approach would be just to deploy the entire project, using the [`yarn webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project#the-deploy-command) command.
 
+Additionally, before you re-deploy the changes into the production environment, it's recommended that you re-deploy the changes into one of your test or preview environments first.
+
 **How can we check what's the version of Webiny we're currently at?**
 
 In your terminal of choice and in your project root, run the following command:
