fix: add warning about major version upgrades

--- a/docs/how-to-guides/upgrade-webiny.mdx
+++ b/docs/how-to-guides/upgrade-webiny.mdx
@@ -17,6 +17,10 @@ import { Box, Button, Heading, Grid, Link, Badge } from "theme-ui";
 
 ## How to upgrade
 
+:::caution
+The following guide does not apply if you're interested in doing a major version upgrade, for example upgrading from version 4 to version 5.
+:::
+
 Upgrading Webiny consists of two parts.
 
 The first part is to upgrade all of the `@webiny/*` packages to the latest version.
