fix: update FAQ

--- a/docs/how-to-guides/upgrade-webiny.mdx
+++ b/docs/how-to-guides/upgrade-webiny.mdx
@@ -65,6 +65,10 @@ Yes, once you've completed the upgrade steps, in order to actually see the new f
 
 Additionally, before you re-deploy the changes into the production environment, it's recommended that you re-deploy the changes into one of your test or preview environments first.
 
+**Is it possible to upgrade Webiny from v4 to v5?**
+
+Differences between these two versions are so vast that it's simply impossible to do the upgrade. If you're interested in migrating your existing project to v5, unfortunately, you will have to recreate your existing content in a new v5 project, either manually, or by writing your own custom migration scripts.
+
 **How can we check what's the version of Webiny we're currently at?**
 
 In your terminal of choice and in your project root, run the following command:
