fix: temporary remove `webiny destroy`

--- a/docs/how-to-guides/deployment/destroy-your-project.mdx
+++ b/docs/how-to-guides/deployment/destroy-your-project.mdx
@@ -10,7 +10,7 @@ description: Learn how to destroy the cloud infrastructure deployed for your pro
 - how to destroy cloud infrastructure previously deployed for project applications (possibly into multiple environments)
 :::
 
-## The `destroy` command
+<!-- ## The `destroy` command
 
 To make it a bit easier for users that are just testing Webiny or want to quickly destroy all of the deployed cloud infrastructure, Webiny CLI provides the `destroy` command, which destroys all of the cloud infrastructure, deployed by the three applications that are by default included in a Webiny project.
 
@@ -30,12 +30,15 @@ The `destroy` command destroys the cloud infrastructure that was deployed into t
 ```
 yarn webiny destroy --env prod
 ```
+-->
 
 ## The `app destroy` command
 
-This command lets you destroy cloud infrastructure previously deployed by a single project application. This can be handy if you want to avoid completely destroying all cloud infrastructure that was deployed by the default project applications, which is what the shown `destroy` command does.
+This command lets you destroy cloud infrastructure previously deployed by a single project application. <!-- This can be handy if you want to avoid completely destroying all cloud infrastructure that was deployed by the default project applications, which is what the shown `destroy` command does. -->
 
-As its first argument, the `app destroy` command receives the path to the project application folder. You also need to specify the environment in which the cloud infrastructure was previously deployed, which is specified via the `--env` argument. Note that, unlike with the `destroy` command, the `--env` argument is not optional and it needs to be provided explicitly.
+As its first argument, the `app destroy` command receives the path to the project application folder. You also need to specify the environment in which the cloud infrastructure was previously deployed, which is specified via the `--env` argument.
+
+<!-- Note that, unlike with the `destroy` command, the `--env` argument is not optional and it needs to be provided explicitly. -->
 
 The following destroy commands destroy cloud infrastructure deployed for three project applications, all previously deployed into the `dev` environment:
 
